--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
 				"expo-dev-launcher",
 				{
 					"launchMode": "most-recent"
-				}
+				},
+				"react-native-bottom-tabs"
 			]
 		],
 		"experiments": {
