--- a/app.json
+++ b/app.json
@@ -39,9 +39,9 @@
 				"expo-dev-launcher",
 				{
 					"launchMode": "most-recent"
-				},
-				"react-native-bottom-tabs"
-			]
+				}
+			],
+			["react-native-bottom-tabs"]
 		],
 		"experiments": {
 			"typedRoutes": true
