--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
 						"useFrameworks": "static"
 					}
 				}
-			]
+			],
+			"expo-secure-store"
 		],
 		"experiments": {
 			"typedRoutes": true
