--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@clerk/clerk-expo": "^2.8.2",
     "@clerk/types": "^4.47.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@mui/icons-material": "^6.4.8",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
     "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
@@ -39,13 +40,16 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "metro": "^0.81.0",
+    "pod": "^0.9.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-bottom-tabs": "^0.8.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.7.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
