--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
+    "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.5",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
@@ -49,19 +50,20 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-bottom-tabs": "^0.8.9",
+    "react-native-context-menu-view": "^1.18.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ios-context-menu": "^3.1.0",
     "react-native-ios-utilities": "^5.1.2",
     "react-native-pager-view": "^6.7.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.19.0",
-    "zeego": "^3.0.6",
-    "react-native-svg": "15.8.0",
-    "react-native-reanimated": "~3.16.1"
+    "zeego": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
