--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-vector-icons/ionicons": "^7.4.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "drizzle-orm": "^0.41.0",
     "expo": "~52.0.36",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -40,6 +41,7 @@
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
@@ -70,6 +72,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "drizzle-kit": "^0.30.6",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
