--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
     "expo-doctor": "^1.12.5",
+    "expo-drizzle-studio-plugin": "^0.1.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -72,6 +73,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "drizzle-kit": "^0.30.6",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
