--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-vector-icons/ionicons": "^7.4.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "expo": "~52.0.36",
     "expo-auth-session": "~6.0.3",
@@ -53,6 +54,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-bottom-tabs": "^0.8.9",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-context-menu-view": "^1.18.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ios-context-menu": "^3.1.0",
