--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-vector-icons/ionicons": "^7.4.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@sentry/react-native": "^6.10.0",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "expo": "~52.0.36",
