--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pod": "^0.9.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.0",
     "react-native": "0.76.7",
     "react-native-bottom-tabs": "^0.8.9",
     "react-native-bouncy-checkbox": "^4.1.2",
