--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/clerk-expo": "^2.8.2",
     "@clerk/types": "^4.47.0",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@mui/icons-material": "^6.4.8",
     "@react-native-menu/menu": "^1.2.2",
     "@react-native-vector-icons/common": "^11.0.0",
