Add app.json entry for panning Android keyboard to cover Tabs when keyboard pops-up

--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.interik.todoistClone"
+      "package": "com.interik.todoistClone",
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "bundler": "metro",
