--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.19.0",
-    "zeego": "^3.0.6"
+    "zeego": "^3.0.6",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
