--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@clerk/clerk-expo": "^2.8.2",
     "@clerk/types": "^4.47.0",
     "@expo/vector-icons": "^14.0.2",
+    "@fowusu/calendar-kit": "^1.1.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@mui/icons-material": "^6.4.8",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-menu/menu": "^1.2.2",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/ionicons": "^7.4.0",
@@ -73,7 +75,7 @@
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.19.0",
     "zeego": "^3.0.6",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "@shopify/flash-list": "1.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
