--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@sentry/react-native": "^6.10.0",
+    "@shopify/flash-list": "1.7.3",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "expo": "~52.0.46",
@@ -41,6 +42,7 @@
     "expo-dev-client": "~5.0.12",
     "expo-doctor": "^1.12.5",
     "expo-drizzle-studio-plugin": "^0.1.2",
+    "expo-dynamic-app-icon": "^1.2.0",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -74,8 +76,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.19.0",
-    "zeego": "^3.0.6",
-    "@shopify/flash-list": "1.7.3"
+    "zeego": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
