Add configuration for dynamic icons

--- a/app.json
+++ b/app.json
@@ -26,6 +26,27 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "expo-dynamic-app-icon",
+        {
+          "default": {
+            "image": "./assets/images/icon.png",
+            "prerendered": true
+          },
+          "dark": {
+            "image": "./assets/images/icon-dark.png",
+            "prerendered": true
+          },
+          "green": {
+            "image": "./assets/images/icon-green.png",
+            "prerendered": true
+          },
+          "blue": {
+            "image": "./assets/images/icon-blue.png",
+            "prerendered": true
+          }
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
@@ -60,7 +81,8 @@
           "project": "todoist-clone",
           "organization": "erikvelf-team"
         }
-      ]
+      ],
+      "expo-dynamic-app-icon"
     ],
     "experiments": {
       "typedRoutes": true
