--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "expo": "~52.0.46",
+    "expo-alternate-app-icons": "^1.3.2",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
